--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.733.0",
+    "@aws-sdk/s3-request-presigner": "^3.733.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
