--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "http-errors": "^2.0.0",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
+    "nanoid": "^5.0.9",
     "next": "15.1.3",
     "pg": "^8.13.1",
     "react": "^19.0.0",
