--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "http-errors": "^2.0.0",
     "jose": "^5.9.6",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
-    "nanoid": "^5.0.9",
-    "next": "15.1.3",
+    "next": "^15.1.7",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -36,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
