--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.733.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
+    "@langchain/community": "^0.3.35",
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.4.4",
+    "@langchain/pinecone": "^0.2.0",
+    "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
@@ -20,6 +25,7 @@
     "drizzle-orm": "^0.38.3",
     "http-errors": "^2.0.0",
     "jose": "^5.9.6",
+    "langchain": "^0.3.19",
     "lucide-react": "^0.469.0",
     "next": "^15.1.7",
     "pg": "^8.13.1",
