--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^5.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-pdf/renderer": "^4.3.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -28,10 +29,12 @@
     "langchain": "^0.3.19",
     "lucide-react": "^0.469.0",
     "next": "^15.1.7",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-pdf": "^9.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
