--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "sass-ai",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev:ws": "tsx server/server.ts",
+    "dev:next": "next dev --turbopack",
+    "dev": "concurrently \"npm run dev:ws\" \"npm run dev:next\"",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -49,12 +52,15 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ws": "^8.18.1",
+    "concurrently": "^9.1.2",
     "drizzle-kit": "^0.30.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tsx": "^4.19.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5"
   }
 }
