--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
+    "sass": "^1.87.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.1",
