--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 			}
 		],
 		"paths": {
-			"@/*": ["./src/*", "./server/*"]
+			"@/*": ["./src/*", "./server/*"],
+			"@/styles/*": ["./src/styles/*"]
 		}
 	},
 	"include": [
