--- a/package.json
+++ b/package.json
@@ -45,12 +45,11 @@
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
     "sass": "^1.87.0",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/js-cookie": "^3.0.6",
@@ -60,6 +59,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
+    "biome": "^0.3.3",
     "concurrently": "^9.1.2",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9",
