--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-markdown": "^10.1.0",
     "react-pdf": "^9.2.1",
     "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
