--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.733.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
+    "@langchain/anthropic": "^0.3.23",
     "@langchain/community": "^0.3.35",
     "@langchain/core": "^0.3.42",
+    "@langchain/groq": "^0.2.3",
     "@langchain/openai": "^0.4.4",
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^5.1.1",
