--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@langchain/community": "^0.3.35",
     "@langchain/core": "^0.3.42",
     "@langchain/groq": "^0.2.3",
+    "@langchain/langgraph": "^0.3.5",
     "@langchain/openai": "^0.4.4",
     "@langchain/pinecone": "^0.2.0",
     "@pinecone-database/pinecone": "^5.1.1",
@@ -33,6 +34,7 @@
     "http-errors": "^2.0.0",
     "jose": "^5.9.6",
     "langchain": "^0.3.19",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.469.0",
     "next": "^15.1.7",
     "pdf-parse": "^1.1.1",
