--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.733.0",
     "@aws-sdk/s3-request-presigner": "^3.733.0",
+    "@dqbd/tiktoken": "^1.0.21",
     "@langchain/anthropic": "^0.3.23",
     "@langchain/community": "^0.3.35",
     "@langchain/core": "^0.3.42",
@@ -50,6 +51,7 @@
     "remark-gfm": "^4.0.1",
     "remark-prism": "^1.3.6",
     "sass": "^1.87.0",
+    "tiktoken": "^1.0.21",
     "ws": "^8.18.1",
     "zod": "^3.25.71"
   },
