--- a/package.json
+++ b/package.json
@@ -1,80 +1,75 @@
 {
-  "name": "sass-ai",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev:ws": "tsx server/server.ts",
-    "dev:next": "next dev --turbopack",
-    "dev": "concurrently \"npm run dev:ws\" \"npm run dev:next\"",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.733.0",
-    "@aws-sdk/s3-request-presigner": "^3.733.0",
-    "@dqbd/tiktoken": "^1.0.21",
-    "@langchain/anthropic": "^0.3.23",
-    "@langchain/community": "^0.3.35",
-    "@langchain/core": "^0.3.42",
-    "@langchain/groq": "^0.2.3",
-    "@langchain/langgraph": "^0.3.5",
-    "@langchain/openai": "^0.4.4",
-    "@langchain/pinecone": "^0.2.0",
-    "@pinecone-database/pinecone": "^5.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@react-pdf/renderer": "^4.3.0",
-    "aws-sdk": "^2.1692.0",
-    "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotenv": "^16.4.7",
-    "drizzle-orm": "^0.38.3",
-    "highlight.js": "^11.11.1",
-    "http-errors": "^2.0.0",
-    "jose": "^5.9.6",
-    "langchain": "^0.3.19",
-    "lru-cache": "^11.1.0",
-    "lucide-react": "^0.469.0",
-    "next": "^15.1.7",
-    "pdf-parse": "^1.1.1",
-    "pg": "^8.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.5",
-    "react-markdown": "^10.1.0",
-    "react-pdf": "^9.2.1",
-    "rehype-highlight": "^7.0.2",
-    "rehype-raw": "^7.0.0",
-    "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1",
-    "remark-prism": "^1.3.6",
-    "sass": "^1.87.0",
-    "ws": "^8.18.1",
-    "zod": "^3.25.71"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
-    "@types/pg": "^8.11.10",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/ws": "^8.18.1",
-    "biome": "^0.3.3",
-    "concurrently": "^9.1.2",
-    "drizzle-kit": "^0.31.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.3",
-    "typescript": "^5"
-  }
+	"name": "sass-ai",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev:ws": "tsx server/server.ts",
+		"dev:next": "next dev --turbopack",
+		"dev": "concurrently \"npm run dev:ws\" \"npm run dev:next\"",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@aws-sdk/client-s3": "^3.733.0",
+		"@aws-sdk/s3-request-presigner": "^3.733.0",
+		"@langchain/anthropic": "^0.3.23",
+		"@langchain/community": "^0.3.35",
+		"@langchain/core": "^0.3.42",
+		"@langchain/groq": "^0.2.3",
+		"@langchain/langgraph": "^0.3.5",
+		"@langchain/openai": "^0.4.4",
+		"@langchain/pinecone": "^0.2.0",
+		"@pinecone-database/pinecone": "^5.1.1",
+		"@radix-ui/react-slot": "^1.1.1",
+		"aws-sdk": "^2.1692.0",
+		"bcrypt": "^5.1.1",
+		"clsx": "^2.1.1",
+		"dotenv": "^16.4.7",
+		"drizzle-orm": "^0.38.3",
+		"highlight.js": "^11.11.1",
+		"jose": "^5.9.6",
+		"langchain": "^0.3.19",
+		"lru-cache": "^11.1.0",
+		"lucide-react": "^0.469.0",
+		"next": "^15.1.7",
+		"pdf-parse": "^1.1.1",
+		"pg": "^8.13.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-dropzone": "^14.3.5",
+		"react-markdown": "^10.1.0",
+		"react-pdf": "^9.2.1",
+		"rehype-highlight": "^7.0.2",
+		"rehype-raw": "^7.0.0",
+		"rehype-sanitize": "^6.0.0",
+		"remark-gfm": "^4.0.1",
+		"remark-prism": "^1.3.6",
+		"sass": "^1.87.0",
+		"ws": "^8.18.1",
+		"zod": "^3.25.71"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.0.6",
+		"@eslint/eslintrc": "^3",
+		"@types/bcrypt": "^5.0.2",
+		"@types/js-cookie": "^3.0.6",
+		"@types/node": "^20",
+		"@types/pg": "^8.11.10",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"@types/ws": "^8.18.1",
+		"concurrently": "^9.1.2",
+		"drizzle-kit": "^0.31.0",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.3",
+		"postcss": "^8",
+		"prettier": "^3.5.3",
+		"tsx": "^4.19.3",
+		"typescript": "^5"
+	},
+	"overrides": {
+		"esbuild": "^0.25.8"
+	}
 }
