--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"rehype-sanitize": "^6.0.0",
 		"remark-gfm": "^4.0.1",
 		"remark-prism": "^1.3.6",
+		"resend": "^6.0.1",
 		"sass": "^1.87.0",
 		"ws": "^8.18.1",
 		"zod": "^3.25.71"
