--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"build:ws": "tsc server/server.ts --outDir dist-server --esModuleInterop --module commonjs",
 		"start:ws": "node dist-server/server.js",
 		"start": "next start & npm run start:ws",
-		"lint": "next lint"
+		"lint": "next lint",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.733.0",
@@ -56,6 +57,8 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
 		"@eslint/eslintrc": "^3",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/react": "^16.3.0",
 		"@types/bcrypt": "^5.0.2",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
@@ -63,14 +66,18 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"@types/ws": "^8.18.1",
+		"@vitejs/plugin-react": "^5.0.4",
 		"concurrently": "^9.1.2",
 		"drizzle-kit": "^0.31.0",
 		"eslint": "^9",
 		"eslint-config-next": "15.1.3",
+		"jsdom": "^27.0.0",
 		"postcss": "^8",
 		"prettier": "^3.5.3",
 		"tsx": "^4.19.3",
-		"typescript": "^5"
+		"typescript": "^5",
+		"vite-tsconfig-paths": "^5.1.4",
+		"vitest": "^3.2.4"
 	},
 	"overrides": {
 		"esbuild": "^0.25.8"
