--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"remark-prism": "^1.3.6",
 		"resend": "^6.0.1",
 		"sass": "^1.87.0",
+		"winston": "^3.17.0",
 		"ws": "^8.18.1",
 		"zod": "^3.25.71"
 	},
