moved jwt.ts to a shared lib folder for use with websocket server

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
 		"paths": {
 			"@/*": ["./src/*", "./server/*"],
 			"@/styles/*": ["./src/styles/*"],
-			"@/hooks/*": ["./src/hooks/*"]
+			"@/hooks/*": ["./src/hooks/*"],
+			"@/shared/*": ["./shared/*"]
 		}
 	},
 	"include": [
