--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
 		"lru-cache": "^11.1.0",
 		"lucide-react": "^0.469.0",
 		"next": "15.5.9",
-		"pdf-parse": "^1.1.1",
 		"pg": "^8.13.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -80,8 +79,6 @@
 		"vitest": "^3.2.4"
 	},
 	"overrides": {
-		"esbuild": "^0.25.8",
-		"tar": "^7.5.3",
-		"@mapbox/node-pre-gyp": "^2.0.0"
+		"esbuild": "^0.25.8"
 	}
 }
